<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width ="wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity = "center" >
        <TextView
            android:id = "@+id/nameTextView"
            android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_gravity="center"
        	android:gravity="center"
        	android:text = "@string/name_text_view" />
         <EditText
            android:id = "@+id/nameEditText"
            android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_gravity="center"
        	android:gravity="center"
        	android:hint = "@string/name_edit_text" />         
    </LinearLayout>
    <Button
        android:id = "@+id/addButton"
        android:layout_width ="wrap_content"
    	android:layout_height = "wrap_content"
    	android:layout_gravity="center"
        android:gravity="center"
      	android:text = "@string/add_button" />


</LinearLayout>
