<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width ="wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity = "center" >
        <TextView
            android:id = "@+id/courseTextView"
            android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_gravity="center"
        	android:gravity="center"
        	android:text = "@string/course_name_edit_text" />
         <Spinner
            android:id = "@+id/courseSpinner"
            android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_gravity="center"
        	android:gravity="center"
        	android:spinnerMode="dialog"
        	android:prompt="@string/course_name_edit_text" />         
    </LinearLayout>
    <LinearLayout
        android:layout_width ="wrap_content"
        android:layout_height = "wrap_content"
        android:layout_gravity = "center" >
        <TextView
            android:id = "@+id/teacherTextView"
            android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_gravity="center"
        	android:gravity="center"
        	android:text = "@string/teacher_name_edit_text" />
         <Spinner
            android:id = "@+id/teacherSpinner"
            android:layout_width ="wrap_content"
        	android:layout_height = "wrap_content"
        	android:layout_gravity="center"
        	android:gravity="center"
        	android:spinnerMode="dialog"
        	android:prompt="@string/teacher_name_edit_text" />         
    </LinearLayout>    
    <Button
        android:id = "@+id/addButton"
        android:layout_width ="wrap_content"
    	android:layout_height = "wrap_content"
    	android:layout_gravity="center"
        android:gravity="center"
      	android:text = "@string/add_button" />


</LinearLayout>
